--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "yaml-rust-davvid"
-version = "0.5.1" # remember to update html_root_url
+name = "yaml_rust_formatter"
+version = "0.5.1"
 authors = [
     "Yuheng Chen <yuhengchen@sensetime.com>",
-    "David Aguilar <davvid@gmail.com>"
+    "David Aguilar <davvid@gmail.com>",
+    "Jesse Hoobergs"
 ]
-homepage = "https://davvid.github.io/yaml-rust"
-documentation = "https://docs.rs/yaml-rust"
+# homepage = "https://davvid.github.io/yaml-rust"
+# documentation = "https://docs.rs/yaml-rust"
 license = "MIT/Apache-2.0"
-description = "The missing YAML 1.2 parser for rust"
-repository = "https://github.com/davvid/yaml-rust"
+description = "A formatter for yaml based on yaml_rust"
+#repository = "https://github.com/davvid/yaml-rust"
 readme = "README.md"
 edition = "2018"
 
